# safe-key-platform

./: CMakeLists.txt  main.cpp
entity/: SecKey.hpp  test.cpp
proto/: Makefile  network_msg.pb.cc  network_msg.pb.h  network_msg.proto  test.cpp
utils/: SecKeyShm.cpp  SecKeyShm.h  test.cpp
